Add Liron Soffer explicitly to contributors

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -10,6 +10,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "lironsoffer",
+      "name": "Liron Soffer",
+      "avatar_url": "https://avatars.githubusercontent.com/u/18441236?v=4",
+      "profile": "https://github.com/lironsoffer",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "files": [
